CSS and JS added

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Tahoma, sans-serif;
   }
   
   :root {
@@ -83,12 +84,13 @@
   }
   
   .category {
-    padding: 3px;
+    padding: 3px 5px;
     color: var(--black);
     text-decoration: none;
     display: block;
     width: fit-content;
     margin: 10px 0 10px;
+    border-radius: 5px;
   }
   
   .career {
@@ -127,14 +129,35 @@
   .avatar-container {
     display: flex;
     justify-content: center;
-    gap: 10px;
     flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .avatar-container img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
   }
   
-  .avatar-container img {
+  .avatar-container a {
     width: 30px;
     height: 30px;
+    border-radius: 50%;
+    margin-left: -15px;
+    border: 2px solid #fff;
+    cursor: pointer;
+    transition: width .2s, height .2s, box-shadow .1s;
+    overflow: hidden;
   }
+
+  .avatar-container a:hover{
+    width: 40px;
+    height: 40px;
+    z-index: 999;
+    box-shadow: rgba(255, 255, 255, 0.12) 0px 2px 4px 0px, rgba(255, 255, 255, 0.32) 0px 2px 16px 0px;
+  }
+
   
   @media (max-width: 750px) {
     .table-wrapper {
